@@ -17,6 +17,9 @@ Absences 2:
 LSUN:
 - Possibilité de n'extraire qu'une ou certaines périodes.
 
+Genèse des classes:
+- Possibilité d'utiliser un autre type de profil mêlant comportement et niveau scolaire.
+
 
 Gepi-1.7.1 (30/03/2017)
 ===========================
